@@ -5,6 +5,8 @@ Oct 13, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - when deleting last server from favorites, do not display it any longer
 - replace unsigned char type by enum server_type type
 - grey out delete button for masters != favorites
+- comment out unused redial code
+- rename "Delete" -> "Remove from Favorites"
 
 Oct 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - cleaned up get_custom_arguments
